# pulumi_eks

./: Pulumi.yaml  __main__.py  pyproject.toml  requirements.txt
kubernetes_resources/: pod.yaml  sa.yaml
